правки правки правки

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -6,10 +6,18 @@
   year = {2013}
 }
 
+@article{BDD,
+author = {Dan North},
+journal = {Better Software},
+title    = {The evolution of behavior-driven development},
+year = {2006}, 
+}
+
 @book{Eshby1959,
-author="Росс Эшби У",
-title="An Introduction to Cybernetics",
-year=1959,
+author="У.Р. Эшби",
+title="Введение в кибернетику",
+publisher="Рипол Классик",
+year="1959",
 pages="432 с.",
 language="russian"
 }
@@ -17,7 +25,7 @@ language="russian"
 @book{conceptPL,
 author="Р.У. Себеста",
 title="Основные концепты языков программирования",
-year=2001,
+year="2001",
 pages="670 с.",
 language="russian"
 }
@@ -48,12 +56,6 @@ year = {2019},
 }
 
 
-@article{BDD,
-author = {Dan North},
-journal = { Better Software},
-title    = {The evolution of behavior-driven development},
-year = {2006}, 
-}
 
 @article{Gherkin,
 title    = {Gherkin Syntax},
@@ -72,7 +74,7 @@ language="russian"
 }
 
 @book{JavaTom1,
-author="Хорстманн, Кей С.",
+author="К.С. Хорстманн",
 title="Java. Библиотека профессионала, том 1. Основы",
 publisher="ИД Вильямс",
 year=2017,
