--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,7 @@
 \usepackage[english,russian]{babel}
 \usepackage[T2A]{fontenc}
 \usepackage{spbstuthesis}
+ \usepackage{cmap}
 \usepackage{graphicx}
 \usepackage{multirow}
 \usepackage{amsmath}
@@ -19,16 +20,16 @@
 
 \Abstract{Выпускная квалификационная работа посвящена разработке языка описания сценариев тестирования автомобильных систем. Проводится сравнительный анализ схожих по тематике инструментов.
 
-Так же описываются принципы разработки языков и технических инструментов, выбранных для разработки.
+Так же описываются принципы разработки языка и технических инструментов, выбранных для разработки.
 
-Результат работы -- язык описания сценариев тестирования автомобильных систем, являющийся потенциально пригодным для внедрения на производстве.
+Результат работы -- язык описания сценариев тестирования автомобильных систем и его интерпретатор, являющиеся потенциально пригодными для внедрения на производстве.
 %для бакалаврских, дипломных и магистерских работ
 
 Ключевые слова: Предметно-ориентированный язык, функциональное тестирование, автомобильные системы.
 
 }{Final year graduation diploma dedicated to the development of the language designed for describing various automobile system testing scenarios. The comparable analysis of systems that share similar instruments is conducted.
 
-Furthermore, this paper aims to describe the development of the programming languages as well as technical instruments used by them.
+Furthermore, this paper aims to describe the development of the programming language as well as technical instruments used by them.
 
 The final result of this work is a fully functional language used for describing automobile testing scenarios. Also, this language could potentially be integrated into the corporate environment.
 
@@ -46,7 +47,7 @@ Keywords: domain specific language, functional testing, automobile systems.
 \item Содержание расчетно-пояснительной записки (перечень подлежащих 
 разработке вопросов).
 \item Перечень графического материала с точным указанием обязательных 
-чертежей.
+чертежей. Не предусмотрен.
 \item Консультанты по проекту (с указанием относящегося к ним разделов 
 проекта, работы).
 }
@@ -94,13 +95,13 @@ AST& Abstract syntax tree\\
 
 Что касается тестирования автомобильных систем, необходимо хорошо понимать, как устроен автомобиль в целом и его составляющие по отдельности. Однако представления о системе у инженеров и менеджеров зачастую очень сильно расходятся. Взаимодействие участников бизнес процесса, а именно заказчика, бизнес-аналитика, менеджера, разработчика и тестировщика, является неотъемлемой частью гибкой методологии разработки ПО (Agile software development).
 
-В данной работе рассматривается разработка языка для функционального тестирования ПО автомобильных систем, позволяющего описывать тестовые сценарии участникам таким участникам бизнес цикла, как аналитики, разработчики и тестировщики.
-Практика «разработка через поведение» (behaviour-driven development, BDD) была создана для достижения взаимопонимания между всеми участниками процесса. В сфере автомобильных систем BDD подход сильно облегчать процесс разработки.
+В данной работе рассматривается разработка и реализация языка для функционального тестирования ПО автомобильных систем, позволяющего описывать тестовые сценарии таким участникам бизнес цикла, как аналитики, разработчики и тестировщики.
+Такой язык должен позволить применять методологию «разработки через поведение» (behaviour-driven development, BDD), которая была создана для достижения взаимопонимания между всеми участниками процесса. В сфере автомобильных систем BDD подход сильно облегчает процесс разработки.
 
 
-Данная работа организована следующим образом. 
+Работа организована следующим образом. 
 В главе \ref{cReview} представлен
-обзор проблемы создания языка для описания тестовых сценариев тестирования автомобильных систем и обзор существующих инструментов для тестирования. 
+обзор проблемы создания языка для описания сценариев тестирования автомобильных систем и обзор существующих инструментов для тестирования. 
 Глава \ref{cDesign} содержит общую информацию о тестировании автомобильных систем и описание платформы тестирования.
 В главе \ref{MethodsOfLangDescription} представлено описание предлагаемого подхода к непосредственному построению языка.
 Вопросы его практической реализации рассмотрены в главах \ref{DescriptionOdDevelopedLang} и \ref{cImplementation2}. 
@@ -114,14 +115,15 @@ AST& Abstract syntax tree\\
 %двигателя''.
 
 %---------------------------ГЛАВА 1.1 ЦЕЛЬ И ЗАДАЧИ
-\section{Цель и задачи} Целью выпускной квалификационной работы является разработка проблемно-ориентированного языка для функционального тестирования автомобильных систем, который облегчит взаимодействие между тестировщиком, заказчиком, менеджером, аналитиками, разработчиками и предоставит функционал, необходимый для симуляции работы автомобильных сетей. Такой язык позволит достичь большего взаимопонимания между менеджерами, аналитиками и инженерами, что в свою очередь значительно упростит разработку ПО и повысит качество разрабатываемого продукта.
+\section{Цель и задачи} 
+Целью выпускной квалификационной работы является разработка и реализация проблемно-ориентированного языка для функционального тестирования автомобильных систем, который облегчит взаимодействие между тестировщиком, заказчиком, менеджером, аналитиками, разработчиками и предоставит функциональность, необходимый для симуляции работы автомобильных сетей. Такой язык позволит достичь большего взаимопонимания между менеджерами, аналитиками и инженерами, что в свою очередь значительно упростит разработку ПО и повысит качество разрабатываемого продукта.
 Для достижения поставленной цели следует выполнить ряд задач.
 \begin{itemize}
 \itemИсследовать предметную область.
 \itemВыделить и сравнить аналоги существующих инструментов для тестирования, позволяющих проверить качество программного обеспечение автомобильной системы.
 \itemРазработать проблемно-ориентированный язык для написания тестовых сценариев.
 \itemРеализовать язык.
-\itemПротестировать реализацию языка, а так же изучить такие аспекты языка, как удобство использования языка и эффективность разработки и сопровождения тестовых сценариев, разрабатываемых на этом языке.
+\itemПротестировать реализацию языка, а так же проанализировать такие аспекты языка, как удобство использования языка и эффективность разработки и сопровождения тестовых сценариев, разрабатываемых на этом языке.
 \end{itemize}
 
 
@@ -154,7 +156,7 @@ Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диа
 \label{fig:image}
 \end{Figure}
 
-В марте 2006 года Д. Норт предложил методологию BDD (behaviour-driven development), основанную на гибкой методологии разработки. BDD является своего рода расширением техники разработки программного обеспечения через тестирование (test-driven development, TDD) \cite{BDD}. Идея BDD подхода была в том, что в процессе написания требования для разрабатываемого ПО аналитики должны описать тестовые сценарии таким образом, чтобы их смог понять и разработчик, и тестировщик, и заказчик. При этом тестовые сценарии состоят из набора заранее обговоренных предложений.
+В марте 2006 года Д. Норт предложил методологию BDD (behaviour-driven development)  \cite{BDD}, основанную на гибкой методологии разработки. BDD является своего рода расширением техники разработки программного обеспечения через тестирование (test-driven development, TDD). Идея BDD подхода была в том, что в процессе написания требования для разрабатываемого ПО аналитики должны описать тестовые сценарии таким образом, чтобы их смог понять и разработчик, и тестировщик, и заказчик. При этом тестовые сценарии состоят из набора заранее обговоренных предложений.
 В своей статье Д. Норт описал следующие BDD идеи:
 
 \begin{itemize}
@@ -166,13 +168,13 @@ Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диа
 \itemПриемочные критерии должны быть выполняемыми.
 \end{itemize}
 
-Почти в то же время Эрик Эванс опубликовал книгу «Предметно-ориентированное проектирование»\cite{EvansE}, в которой описал набор принципов и схем, направленных на создание оптимальных систем объектов. Его идея заключается в том, что для бизнеса удобно смоделировать систему, в которой будет определен единый язык (Domain specific language), основанный на бизнес области, такой, что бизнес словарь смогут использовать как менеджеры так и инженеры.
+Почти в то же время Э. Эванс опубликовал книгу «Предметно-ориентированное проектирование»\cite{EvansE}, в которой описал набор принципов и схем, направленных на создание оптимальных систем объектов. Его идея заключается в том, что для бизнеса удобно смоделировать систему, в которой будет определен единый язык (Domain specific language), основанный на бизнес области, такой, что бизнес словарь смогут использовать как менеджеры так и инженеры.
 
-Совместно Эрик Эванс и Д.Норт разработали шаблон для выявления приемочных критериев теста. Они разработали структуры тестовых сценариев, в которых каждый шаг определялся ключевым словом
+Совместно Э. Эванс и Д. Норт разработали шаблон для выявления приемочных критериев теста. Они разработали структуры тестовых сценариев, в которых каждый шаг определялся ключевым словом:
 \begin{itemize}
-\item Given – дано начальное условие
-\item When – происходит событие
-\item Then – проверка, что получены некоторые результаты
+\item \emph{Given} – дано начальное условие
+\item \emph{When} – происходит событие
+\item \emph{Then} – проверка, что получены некоторые результаты
 \end{itemize}
 
 На основе вышеперечисленных принципов BDD был создан язык Gherkin \cite{Gherkin} – человеко-читаемый язык, используемый для описания поведения системы.
@@ -190,10 +192,10 @@ Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диа
 
 В 2003 году была создана Автомобильная Открытая Системная Архитектура (AUTOSAR, Automotive Open System Architecture). Это открытая архитектура, которая стандартизирует архитектуры ПО для автомобильных ECU и жизненный цикл разработки. Сегодня в Autosar входят более 150 компаний, и в рамках этого партнерства разрабатывается архитектура ECU, базовое программное обеспечение, методология и стандартизованные интерфейсы для прикладного программного обеспечения.
 
-Учитывая, что все системы стандартизированы, одну и ту же систему (например, лидары для автомобилей марок Diamler и Audi) можно протестировать использую одни и те же инструменты. Однако, среди современных средств для тестирования программных систем нет специализированных под специфические нужды автомобильной промышленности, и при этом позволяющих разрабатывать спецификации на человеко-читаемом языке для реализации BDD подхода.
+Учитывая, что все системы стандартизированы, одну и ту же систему (например, лидары для автомобилей марок Daimler и Audi) можно протестировать используя одни и те же инструменты. Однако среди современных средств для тестирования программных систем нет специализированных под специфические нужды автомобильной промышленности, и при этом позволяющих разрабатывать спецификации на человеко-читаемом языке для реализации BDD подхода.
 
 
-С расширением областей применения вычислительной техники возникли задачи, которые проще реализовать не программистам, а специалистам в определенной предметной области -- аналитикам. Однако зачастую аналитики не имеют достаточных знаний в языках программирования общего назначения, либо использование этих языков не удобно из-за большого количества не относящихся к решаемой задаче деталей (управление памятью, низкоуровневые управляющие конструкции и так далее). Для решения этой проблемы возникла идея создавать проблемно-ориентированные языки (domain-specific language, DSL), позволяющие в определенной области использовать специфичные обозначения и термины. Такие языки обеспечивают пользователям возможность коротко и четко сформулировать задачу и получить результаты в необходимой для них форме.
+С расширением областей применения вычислительной техники возникли задачи, которые проще реализовать не программистам, а специалистам в определенной предметной области -- аналитикам. Однако зачастую аналитики не имеют достаточных знаний о языках программирования общего назначения, либо использование этих языков неудобно из-за большого количества не относящихся к решаемой задаче деталей (управление памятью, низкоуровневые управляющие конструкции и так далее). Для решения этой проблемы используются проблемно-ориентированные языки (domain-specific language, DSL), позволяющие в определенной области использовать специфичные обозначения и термины. Такие языки обеспечивают пользователям возможность коротко и четко сформулировать задачу и получить результаты в необходимой для них форме.
 
 
 Хорошо разработанный DSL язык должен быть основан на следующих принципах \cite{DSLInAction}:
@@ -203,7 +205,7 @@ Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диа
 \itemИмплементация языка должна быть абстракцией. В язык не должно быть точных фрагментов имплементации языка.
 \end{itemize}
 
-Использование проблемно-ориентированный языка позволит решить проблему разработки тестовой документации понятной всем участникам бизнес процесса с учетом специфики автомобильной промышленности.
+Использование проблемно-ориентированного языка позволит решить проблему разработки тестовой документации понятной всем участникам бизнес процесса с учетом специфики автомобильной промышленности.
 
 %----------------------------------------ГЛАВА 1.3. Анализ существующих инструментов для тестирования
 \section{Анализ существующих инструментов для тестирования}
@@ -460,7 +462,7 @@ $S$ – начальный символ грамматики.
 
 Предполагается, что лексер берет входную строку, содержащую файлы с исходным кодом на разрабатываемом языке и разделяет его на список токенов. Лексер может выполнять такие задачи, как удаление комментариев, определение чисел и т.д.
 
-ЛА необязательный этап, но желательный так как:
+ЛА-- необязательный этап, но желательный, так как:
 
 1) замена идентификаторов, констант, ограничителей и служебных слов лексемами делает программу более удобной для дальнейшей обработки.
 
@@ -480,7 +482,7 @@ $S$ – начальный символ грамматики.
 %синтаксический анализ
 Синтаксический анализ – это процесс сопоставления линейной последовательности лексем (слов, фраз) языка с его формальной грамматикой. Результатом обычно является синтаксическое дерево. Обычно применяется совместно с лексическим анализом. Синтаксический анализатор— это программа или часть программы, выполняющая синтаксический анализ, то есть распознавание входной информации. При этом входные данные преобразуются к виду, пригодному для дальнейшей обработки. Этот вид обычно представляет собой формальную модель входной информации на языке последующего процесса обработки информации.
 
-Вовремя парсинга входной текст преобразуется в структуру данных, которая отражает синтаксическую структуру входной последовательности и подходит для последующей обработки. Как правило, синтаксическая структура представляется в виде дерева зависимостей.
+Во время парсинга входной текст преобразуется в структуру данных, которая отражает синтаксическую структуру входной последовательности и подходит для последующей обработки. Как правило, синтаксическая структура представляется в виде дерева зависимостей.
 
 Существуют следующие алгоритмы синтаксического анализа:
 \begin{itemize}
@@ -506,6 +508,16 @@ $S$ – начальный символ грамматики.
 
 Механизм рефлексии позволяет обрабатывать типы, отсутствующие при компиляции, но появившиеся во время выполнения программы. Возможность использования рефлексии реализована в Java с помощью Reflection API. Библиотека java.lang.reflect предоставляет возможность манипулировать кодом Java в динамическом режиме.
 
+\section{Инструмент для построения языка}
+Задача построения языка довольна трудозатратна. Однако существуют программные инструменты, помогающие сделать его меньше и проще. Для этого был разработан следующий инструментарий для создания компиляторов и интерпретаторов: генераторы лексических анализаторов (сканеров), генераторы синтаксических анализаторов (парсеров), автоматические генераторы кода.
+
+Для реализации языка было выбрано «еще одно средство распознавания языков» ANTLR4 (ANother Tool for Language Recognition). Это генератор нисходящих анализаторов для формальных языков. Он преобразует контекстно-свободную грамматику в форме РБНФ в программу на Java, C++, JavaSript, Go. Python и Go.
+
+ANTLR4 удобен для работы с AST, является свободным программным обеспечением, предоставляет сообщение об ошибках и восстановление после них, а так же предоставляет плагины для Eclipse и IntelliJ IDEA, что позволяет удобно создавать и отлаживать грамматики. Интерпретатор реализован на языке java.
+
+Описание грамматики в ANTLR4 состоит из правил, описываемых в файлах с расширением \textbf{.g4}. ANTLR4 позволяет описывать лексемы и синтаксические правила в одном файле грамматики. В этом случае в заголовке файла указывается ключевое слово grammar и название грамматики, которое должно совпадать с названием файла, в котором она описывается. Так же генератор позволяет разделять их на файлы, в котором описываются лексемы (заголовок lexer grammar) и синтаксические правила (parser grammar). Второй способ удобнее с точки зрения логического разделения описания лексем и правил. Далее файл, в котором описываются лексемы будем называть лексером, а файл, в котором описываются синтаксические правила парсером.
+
+
 % ------------------------------------------------ГЛАВА Реализационная часть
 \chapter{Описание разрабатываемого языка}
 \label{DescriptionOdDevelopedLang}
@@ -517,13 +529,6 @@ $S$ – начальный символ грамматики.
 %программного продукта.
 
 
-Задача построения языка довольна трудозатратна. Однако существуют программные инструменты, помогающие сделать его меньше и проще. Для этого был разработан следующий инструментарий для создания компиляторов и интерпретаторов: генераторы лексических анализаторов (сканеров), генераторы синтаксических анализаторов (парсеров), автоматические генераторы кода.
-
-Для реализации языка было выбрано «еще одно средство распознавания языков» ANTLR4 (ANother Tool for Language Recognition). Это генератор нисходящих анализаторов для формальных языков. Он преобразует контекстно-свободную грамматику в форме РБНФ в программу на Java, C++, JavaSript, Go. Python и Go.
-
-ANTLR4 удобен для работы с AST, является свободным программным обеспечением, предоставляет сообщение об ошибках и восстановление после них, а так же предоставляет плагины для Eclipse и IntelliJ IDEA, что позволяет удобно создавать и отлаживать грамматики. Интерпретатор реализован на языке java.
-
-Описание грамматики в ANTLR4 состоит из правил, описываемых в файлах с расширением \textbf{.g4}. ANTLR4 позволяет описывать лексемы и синтаксические правила в одном файле грамматики. В этом случае в заголовке файла указывается ключевое слово grammar и название грамматики, которое должно совпадать с названием файла, в котором она описывается. Так же генератор позволяет разделять их на файлы, в котором описываются лексемы (заголовок lexer grammar) и синтаксические правила (parser grammar). Второй способ удобнее с точки зрения логического разделения описания лексем и правил. Далее файл, в котором описываются лексемы будем называть лексером, а файл, в котором описываются синтаксические правила парсером.
 
 %-------------------------------------ЛЕКСЕР
 \section{Лексический анализатор}
@@ -544,13 +549,7 @@ ANTLR4 удобен для работы с AST, является свободным программным обеспечением, пре
 
 Предположим, что синтаксис разрабатываемого языка будет иметь ключевые слова, по которым можно определить входные и выходные данные, возможность описывать сценарии на языке, привычном пользователю, будь то русский или английский.
 
-В качестве входов системы рассмотрим пакеты данных, отправляемые тестируемому оборудованию, а так же установку значений параметров (частота передачи данных, значения отправляемых сигналов и д.р.). В этом случае входы системы можно разделить на два класса: отправка данных и настройка данных. В таком случае выходами системы будут получаемые с тестируемого оборудования пакеты данных. Данные могут приниматься единожды (UDS пакеты), или же периодически (синхросигналы). Соответственно, представляется логичным разделить их на две большие группы: получение пакетов и данные, которые необходимо проверить в определенный момент времени. В этом случае система управления имеет входы $X(Send_{data}, Set_{data})$ и выходы $Y(Recieve_{data}, Check_{data})$. На рис. \ref{blackBoxKeyWords} в качестве входных и выходных данных «черного ящика» представлены ключевые слова, которыми назовем четыре группы вышеописанных данных.
-
-\begin{Figure}{Тестирование автомобильной системы в качестве «черного ящика»}{blackBoxKeyWords}
-{\includegraphics[width=\linewidth]{res/blackBoxKeyWords}}
-\label{fig:image}
-\end{Figure}
-
+В качестве входов системы рассмотрим пакеты данных, отправляемые тестируемому оборудованию, а так же установку значений параметров (частота передачи данных, значения отправляемых сигналов и д.р.). В этом случае входы системы можно разделить на два класса: отправка данных и настройка данных. В таком случае выходами системы будут получаемые с тестируемого оборудования пакеты данных. Данные могут приниматься единожды (UDS пакеты), или же периодически (синхросигналы). Соответственно, представляется логичным разделить их на две большие группы: получение пакетов и данные, которые необходимо проверить в определенный момент времени. В этом случае система управления имеет входы $X(Send_{data}, Set_{data})$ и выходы $Y(Recieve_{data}, Check_{data})$.
 
 
 Из вышеуказанного можно определить следующий набор ключевых слов с которых должен начинаться любой шаг сценария: \textbf{Send}, \textbf{Set}, \textbf{Check}, \textbf{Receive}, \textbf{Pause}, \textbf{Repeat}. При этом ключевые слова должны начинаться с определенного начального символа, обозначающее начало служебного слова. При тестировании программного обеспечения ECU для автомобильных систем наименее вероятно использование символа коммерческое at(@), поэтому этот символ будет обозначать ключевые слова.
@@ -766,12 +765,12 @@ Java Native Interface (JNI) — стандартный механизм для запуска кода, под управле
 %\section{Архитектура системы}
 %Псевдокоды или блок-схемы основных алгоритмов, основные структуры данных и др.
 
-Ниже представлена диаграмма классов интерпретатора.
+На рисунке \ref{ClassDiagram} представлена диаграмма классов интерпретатора.
 
 \begin{figure}[h!]
 \center{\includegraphics[width=\linewidth]{res/ClassDiagram}}
 \caption{Диаграмма классов}
-\label{fig:image}
+\label{fig:ClassDiagram}
 \end{figure}
 
 
@@ -811,7 +810,7 @@ Java Native Interface (JNI) — стандартный механизм для запуска кода, под управле
 
 В случае, если на вход подается тестовая спецификация, в которой указана инструкция, не объявленная в пользовательской библиотеке команд (листинг \ref{lst:ErrorExample2}), возникает исключение UndefinedInstructionException, сообщающее какая именно инструкция была не определена (листинг \ref{lst:ErrorExampleRes2}).
 
-\lstinputlisting[caption=Пример тестового сценария необъявленной инструкцией, language=java, firstline=18, lastline=20, , label={lst:ErrorExampleInput2} ]{res/ErrorExample.txt}
+\lstinputlisting[caption=Пример тестового сценария c необъявленной инструкцией, language=java, firstline=18, lastline=20, , label={lst:ErrorExampleInput2} ]{res/ErrorExample.txt}
 
 
 \lstinputlisting[caption=Результат работы интерпретатора для тестового сценария с необъявленной инструкцией, language=java, firstline=22, lastline=23, label={lst:ErrorExampleRes2}]{res/ErrorExample.txt}
@@ -820,7 +819,7 @@ Java Native Interface (JNI) — стандартный механизм для запуска кода, под управле
 
 %TODO: add more info about defferent exceptions
 
-\chapter{Экспериментальная часть }
+\chapter{Тестирование и опробация}
 \label{cExperiments}
 %Рекомендуемый объем главы --- 5--20 стр.
 %Название главы должно отражать ее содержание, например "Оценка эффективности вечного двигателя''.
@@ -895,7 +894,7 @@ InstructionIsNotDeclared&Instruction 'request [] in functional addressing mode' 
 
 По мнению 100\% респондентов, спецификации, описанные на разработанном языке, достаточно понятны. При этом 13 из 18 опрошенных по возможности описывали бы тестовые сценарии на данном языке. 
 
-\section{Примеры применения разработанного языка}
+\section{Опробация}
 
 В качестве примера применения разработанного языка используем пример тестового сценария для проверки функционала записи данных в энергонезависимую память, рассматриваемого в разделе \ref{lexer}. В качестве тестируемого оборудования использовался лидар. Тестовая спецификация представлена в листинге \ref{lst:FinalTestCaseExample}).
 
